mainapp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - name: main-app
          image: riverfire/dwk-main-app:v0.1
