mainapp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
spec:
  type: ClusterIP
  selector:
    app: main-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
