mainapp/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: main-app-svc
              servicePort: 2345
          - path: /pingpong
            backend:
              serviceName: pingpong-app
              servicePort: 3000
